--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ uvicorn>=0.23.0
 supabase>=2.0.0
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
+asyncpg>=0.29.0
+google-cloud-storage>=2.14.0
 
 # File Handling & Utilities
 python-multipart>=0.0.6
