feat: implement Gemini Batch API for validation and extraction
- Added support for the Gemini Batch API, enabling asynchronous processing of large batches (100+ files) with 50% cost savings and a target turnaround of ~24 hours.
- Updated environment configuration to include batch API settings and service role keys.
- Enhanced API documentation to cover new batch processing capabilities and response structures.
- Implemented database schema for tracking Gemini batch jobs, including CRUD operations for managing job records.
- Introduced CLI commands for polling batch job statuses and processing results.

This implementation significantly improves the efficiency of validation and extraction workflows, allowing for better resource management and cost-effectiveness.

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,15 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # Supabase Configuration
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_KEY=your_supabase_anon_key_here
+# Service role key for scripts (bypasses RLS). Get from Dashboard → Project Settings → API
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 # Optional: for migrations (Supabase Dashboard → Project Settings → Database → Connection string)
 # DATABASE_URL=postgresql://postgres:[PASSWORD]@db.[PROJECT_REF].supabase.co:5432/postgres
+
+# Firebase/GCS Configuration (for storage extraction)
+# Path to service account JSON file OR the JSON string itself
+FIREBASE_CREDENTIALS_PATH=/path/to/serviceAccountKey.json
+# Alternatively: FIREBASE_SERVICE_ACCOUNT_JSON={"type":"service_account",...}
 
 # CORS Configuration
 # Development: ALLOWED_ORIGINS=*
@@ -24,3 +31,8 @@ TRUSTED_PROXIES=
 # Batch processing concurrency (optional, default: 1)
 BATCH_WORKERS=1
 BATCH_API_LIMIT=3
+
+# Gemini Batch API (optional, for 100+ file batches)
+# BATCH_API_THRESHOLD=100
+# BATCH_API_POLL_INTERVAL=60
+# BATCH_API_MODEL=models/gemini-2.5-flash
